# template-tensorflow

./: .gitignore  README.md  README_JA.md  mypy.ini  pyproject.toml  ruff.toml
docs/: sphinx_docs.md
docs/image/: classes.plantuml  packages.plantuml
docs/source/: conf.py  dataset.rst  eval.rst  index.rst  lib.callbacks.rst  lib.common.rst  lib.data.rst  lib.loss.rst  lib.metrics.rst  lib.model.rst  lib.optimizer.rst  lib.rst  train.rst
src/: dataset.py  eval.py  train.py
src/lib/callbacks/: setup.py
src/lib/common/: decorator.py  file.py  log.py  process.py  types.py
src/lib/data/: base.py  cifar.py  mnist.py  processor.py  setup.py
src/lib/loss/: setup.py
src/lib/metrics/: setup.py
src/lib/model/: base.py  layer.py  setup.py  simple.py
src/lib/optimizer/: setup.py
src/param/: param_eval.yaml  param_train.yaml
src/param/tutorial/: param_eval.yaml  param_train.yaml
template_tensorflow/: dataset.py  eval.py  train.py
template_tensorflow/lib/: template.py
template_tensorflow/lib/callbacks/: setup.py
template_tensorflow/lib/common/: decorator.py  define.py  log.py  process.py
template_tensorflow/lib/data/: base.py  cifar.py  mnist.py  processor.py  setup.py
template_tensorflow/lib/loss/: setup.py
template_tensorflow/lib/metrics/: setup.py
template_tensorflow/lib/model/: base.py  layer.py  setup.py  simple.py
template_tensorflow/lib/optimizer/: setup.py
template_tensorflow/param/tutorial/: param_eval.yaml  param_train.yaml
tests/: define.py  pytest_all.sh  test_dataset.py  test_eval.py  test_train.py
tests/lib/data/: test_base.py  (+4 more)
(+41 files in other folders)
