[tool.poetry]
name = "template-tensorflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
scikit-learn = "^1.5.2"
scikit-image = "^0.24.0"
scipy = "^1.14.1"
tensorflow = {extras = ["and-cuda"], version = "^2.18.0"}
tomlkit = "^0.13.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-intl = "^2.2.0"
sphinx-autobuild = "^2024.10.3"
sphinx-rtd-theme = "^3.0.1"

[tool.poetry.group.test.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.2"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
types-pyyaml = "^6.0.12.20240917"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
