[project]
name = "tensorflow-template"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "tensorflow[and-cuda]>=2.19.0",
    "tomlkit>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "types-pyyaml>=6.0.12.20250516",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-intl>=2.3.1",
    "sphinx-rtd-theme>=3.0.2",
]
